# cortex-skills

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
etl-replatform-deploy/: README.md
snowflake-skills/: README.md  install_skills.sh
snowflake-skills/ssis-to-dbt-replatform-migration/: README.md  SKILL.md  pyproject.toml
snowflake-skills/ssis-to-dbt-replatform-migration/references/: phase0-briefing.md  replatform-output-structure.md
snowflake-skills/ssis-to-dbt-replatform-migration/sample-replatform-output/Output/ETL/DailyOrderLoad/LoadCustomers/: dbt_project.yml
snowflake-skills/ssis-to-dbt-replatform-migration/sample-replatform-output/Output/ETL/DailyOrderLoad/LoadOrders/macros/: m_update_control_variable.sql
snowflake-skills/ssis-to-dbt-replatform-migration/sample-replatform-output/Output/ETL/WeeklyInventorySync/AuditLog/: dbt_project.yml
snowflake-skills/ssis-to-dbt-replatform-migration/sample-replatform-output/Output/ETL/etl_configuration/functions/: GetControlVariableUDF.sql
snowflake-skills/ssis-to-dbt-replatform-migration/sample-replatform-output/Output/ETL/etl_configuration/procedures/: UpdateControlVariable.sql
snowflake-skills/ssis-to-dbt-replatform-migration/scripts/replatform_scanner/: __init__.py
snowflake-skills/ssis-to-dbt-replatform-migration/scripts/replatform_scanner/models/: __init__.py
snowflake-skills/ssis-to-dbt-replatform-migration/scripts/replatform_scanner/services/: __init__.py  scanner_service.py  validator_service.py
snowflake-skills/ssis-to-dbt-replatform-migration/tests/: conftest.py  test_scanner.py
(+104 files in other folders)
