[project]
name = "replatform-scanner"
version = "1.0.0"
description = "Scanner and validator for SnowConvert AI Replatform output (SSIS-to-dbt + Snowflake TASKs)"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts/replatform_scanner"]
